Bug 320977 - Autocorrect does not work with capitalized letters
Summary: Autocorrect does not work with capitalized letters
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git (master)
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-10 01:13 UTC by André Marcelo Alvarenga
Modified: 2013-06-10 12:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2013-06-10 01:13:18 UTC
Try add (wrong -> correct):

Blumenal     ->  Blumenau
COMPUTER     ->  computer
COMpUTER     ->  computer

Reproducible: Always
Comment 1 Laurent Montel 2013-06-10 05:26:46 UTC
I don't understand
Where is the error ?
When you try to add it in config dialog box ?
Comment 2 André Marcelo Alvarenga 2013-06-10 11:15:49 UTC
(In reply to comment #1)
> I don't understand
> Where is the error ?
> When you try to add it in config dialog box ?

These are examples of words that autocorrect doesn't work.

In my first example, enter Blumenal in Find field.
Enter Blumenau in Replace field.
Click on Add button.
In Composer, enter Blumenal and space. 

Result: Nothing happens 
Expected: Blumenal should be corrected to Blumenau.

If I use blumenal and Blumenau, autocorrect works.

Ps: This is the name of a city, then it should be capitalized.
Comment 3 Laurent Montel 2013-06-10 11:39:31 UTC
Waou I confirm it doesn't work with first uppercase.
Will look at it now.
Comment 4 Laurent Montel 2013-06-10 12:27:24 UTC
Git commit 080cd7634c09ada1dd85970ef70126bfeb8c4bbf by Montel Laurent.
Committed on 10/06/2013 at 14:27.
Pushed by mlaurent into branch 'master'.

Fix Bug 320977 - Autocorrect does not work with capitalized letters

FIXED-IN: 4.11

M  +20   -4    messagecomposer/autocorrection/composerautocorrection.cpp

http://commits.kde.org/kdepim/080cd7634c09ada1dd85970ef70126bfeb8c4bbf