Fix Bug 320977 - Autocorrect does not work with capitalized letters

FIXED-IN: 4.11
BUG: 320977